fix: update instruction text to match button label

--- a/supabase/email-templates/invite-user.html
+++ b/supabase/email-templates/invite-user.html
@@ -56,7 +56,7 @@
                     <p style="margin: 0 0 12px; color: #f1f5f9; font-size: 14px; font-weight: 600;">Getting started:</p>
                     <table role="presentation" cellspacing="0" cellpadding="0">
                       <tr>
-                        <td style="padding: 4px 0; color: #94a3b8; font-size: 13px;">1. Click "Confirm & Download" below</td>
+                        <td style="padding: 4px 0; color: #94a3b8; font-size: 13px;">1. Click "Download BluePLM" below</td>
                       </tr>
                       <tr>
                         <td style="padding: 4px 0; color: #94a3b8; font-size: 13px;">2. Download BluePLM for your computer</td>
